--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <!-- Posted texts will appear here -->
     </div>
   </div>
+  <footer>
+    <p>IAT431 Speculative Design | Ryan Guo, Jaden S. Lee, Sooa Mo, Joanne Ndagire </p> 
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
