--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <img src="logo.png" alt="Logo" class="logo" />
+    <button id="resetButton">Comments Reset</button>
     <hr />
   </header>
   <div class="container">
