--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </header>
   <div class="container">
     <h2>Question of the day</h2>
-    <h1>How are you doing?</h1>
+    <h1>What’s one small thing that always makes your day better?</h1>
     <div class="input-section">
-      <input type="text" id="nameInput" placeholder="Your name" />
+      <input type="password" id="nameInput" placeholder="Your name" />
       <textarea id="textInput" placeholder="Type your answer here..."></textarea>
       <button id="postButton">Post</button>
     </div>
