--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo" class="logo" />
+    <img src="logo2.png" alt="Logo" class="logo" />
     <hr />
   </header>
   <div class="container">
