--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <footer>
-    <p>IAT431 Speculative Design | Ryan Guo, Jaden S. Lee, Sooa Mo, Joanne Ndagire </p> 
+    <p>IAT431 Speculative Design |  Sooa Mo, Ryan Guo, Jaden S. Lee, Joanne Ndagire </p> 
   </footer>
   <script src="script.js"></script>
 </body>
